--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,33 @@
+[metadata]
+name = megahal
+version = attr: megahal.__version__
+description = Python implementation of megahal markov bot (fork)
+long_description = file: README.md
+author = Chris Jones, Robert Huselius
+author_email = robert@huseli.us
+long_description_content_type = text/markdown
+url = https://github.com/Eboreg/megahal
+classifiers =
+    Development Status :: 4 - Beta
+    Environment :: Console
+    Intended Audience :: Developers
+    License :: OSI Approved :: BSD License
+    Natural Language :: English
+    Operating System :: OS Independent
+    Programming Language :: Python :: 3
+    Topic :: Education
+    Topic :: Scientific/Engineering :: Artificial Intelligence
+    Topic :: Software Development :: Libraries :: Python Modules
+    Topic :: Text Processing :: Linguistic
+
+[options]
+packages = megahal
+python_requires = >=3.6
+install_requires =
+    python-Levenshtein
+scripts =
+    scripts/megahal
+
 [flake8]
 exclude =
     .git
