Full (?) twitterhal.database support

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ packages = megahal
 python_requires = >=3.6
 install_requires =
     python-Levenshtein
+    twitterhal
 scripts =
     scripts/megahal
 
